# Lista-de-tarefas

./: .env.exemplo  .gitignore  Dockerfile  LICENSE  README.md  boot.sh  config.py  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  auth.py  authenticate.py  errors.py  flasgger.py  forms.py  models.py  serializer.py  tarefas.py
assets/static/css/: content.css  form.css  grid.css
assets/static/js/: script.js
assets/template/: index.html  login.html  perfil.html  register.html
migrations/: env.py
migrations/versions/: 333ffe9c0782_criando_as_tabelas_de_usuario_e_tarefas.py
resources/static/css/: content.css  form.css  grid.css  normalize.css  snow.css
resources/static/js/: script.js  snow.js
resources/template/: dashboard.html  error.html  index.html  login.html  perfil.html  register.html
resources/template/partial/: _nav.html  base.html
tests/: conftest.py  test_de_rotas.py  test_endpoints_tarefas.py  test_erros_na_api.py  test_rotas_projeto.py  test_sucessos_na_api.py
