[tool.poetry]
name = "lista-de-tarefas"
version = "0.1.0"
description = ""
authors = ["Thi <tiagoqueirozgoncalves100@gmail.com>"]
readme = "README.md"
packages = [{include = "lista_de_tarefas"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
gunicorn = "^20.1.0"
python-decouple = "^3.6"
Flask-WTF = "^1.0.1"
Flask-Login = "^0.6.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
